--- a/MemeMe-1/Info.plist
+++ b/MemeMe-1/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>impact.ttf</string>
+	</array>
+	<key>LSApplicationCategoryType</key>
+	<array>
+		<string></string>
+	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>Need access in order to take a new picture</string>
 	<key>NSPhotoLibraryUsageDescription</key>
